--- a/canvas.html
+++ b/canvas.html
@@ -9,11 +9,16 @@
       justify-content: center;
       align-items: center;
     }
+
+    canvas {
+      border: 1px solid;
+      height: 98vh;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <canvas style="border: solid 1px; height: 98vh; width: 50%;"></canvas>
+    <canvas></canvas>
   </div>
 </body>
 </html>
