--- a/canvas.html
+++ b/canvas.html
@@ -15,18 +15,13 @@
       flex-direction: column;
       gap: 1rem;
     }
-
-    canvas {
-      border: 1px solid;
-      height: 98vh;
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="item">
       <button>Paste from Clipboard</button>
-      <canvas></canvas>
+      <canvas style="border: 1px solid; height: 98vh;"></canvas>
     </div>
   </div>
 </body>
