--- a/canvas.html
+++ b/canvas.html
@@ -24,5 +24,13 @@
       <canvas style="border: 1px solid; height: 98vh;"></canvas>
     </div>
   </div>
+
+  <script>
+    class Canvas {
+      constructor({ canvas, img }) {
+        this.img = img;
+      }
+    }
+  </script>
 </body>
 </html>
