--- a/canvas.html
+++ b/canvas.html
@@ -20,11 +20,26 @@
   </div>
 
   <script>
-    class Canvas {
-      constructor({ canvas, img }) {
-        this.img = img;
-      }
-    }
+    document.addEventListener("DOMContentLoaded", () => {
+      const canvas = document.querySelector("canvas");
+      const ctx = canvas.getContext("2d");
+      const pasteButton = document.querySelector("button");
+
+      pasteButton.addEventListener("click", () => {
+        navigator.clipboard.readText()
+          .then((text) => {
+            const img = new Image();
+            img.src = text;
+            img.onload = () => {
+              ctx.clearRect(0, 0, canvas.width, canvas.height);
+              ctx.drawImage(img, 0, 0, canvas.width, canvas.height)
+            }
+          })
+          .catch((err) => {
+            console.error("Error reading clipboard text: " + err);
+          })
+      })
+    });
   </script>
 </body>
 </html>
