--- a/canvas.html
+++ b/canvas.html
@@ -9,13 +9,19 @@
       justify-content: center;
       align-items: center;
     }
+
+    canvas {
+      border: 1px solid;
+      height: 80vh;
+      width: 50%;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="item">
       <button>Paste from Clipboard</button>
-      <canvas style="border: 1px solid; height: 98vh;"></canvas>
+      <canvas></canvas>
     </div>
   </div>
 
