--- a/canvas.html
+++ b/canvas.html
@@ -4,13 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Canvas</title>
   <style>
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    button {
+      margin-left: auto;
+      margin-right: auto;
     }
 
     canvas {
+      margin-left: auto;
+      margin-left: auto;
       border: 1px solid;
       height: 80vh;
       width: 50%;
@@ -18,12 +19,8 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="item">
-      <button>Paste from Clipboard</button>
-      <canvas></canvas>
-    </div>
-  </div>
+  <button>Paste from Clipboard</button>
+  <canvas></canvas>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
