--- a/canvas.html
+++ b/canvas.html
@@ -11,9 +11,8 @@
     }
 
     .container {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+      display: flex;
+      justify-content: center;
     }
 
     canvas {
