--- a/canvas.html
+++ b/canvas.html
@@ -42,6 +42,10 @@
         const img = new Image();
         img.src = objectUrl;
         img.onload = () => {
+          const fullHeight = window.innerHeight;
+          canvas.height = img.height > fullHeight ? fullHeight : img.height;
+          canvas.width = canvas.height * img.width / img.height;
+
           ctx.clearRect(0, 0, canvas.width, canvas.height);
           ctx.drawImage(img, 0, 0, canvas.width, canvas.height)
         }
