--- a/canvas.html
+++ b/canvas.html
@@ -14,17 +14,11 @@
       display: flex;
       justify-content: center;
     }
-
-    canvas {
-      border: 1px solid;
-      height: 95vh;
-      width: 50%;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-    <canvas></canvas>
+    <canvas style="border: 1px solid;"></canvas>
   </div>
 
   <script>
