--- a/instadl.html
+++ b/instadl.html
@@ -15,6 +15,11 @@
         display: flex;
         justify-content: space-between;
       }
+      .item {
+        width: 200px;
+        height: 200px;
+        border: 1px;
+      }
     </style>
   </head>
   <body>
@@ -30,6 +35,10 @@
         <span id="total"></span>
       </span>
     </div>
-    <div class="container"></div>
+    <div class="container">
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+    </div>
   </body>
 </html>
