--- a/instadl.html
+++ b/instadl.html
@@ -16,9 +16,9 @@
         justify-content: space-between;
       }
       .item {
-        width: 200px;
-        height: 200px;
-        border: 1px;
+        width: 250px;
+        height: 250px;
+        border: 1px solid;
       }
     </style>
   </head>
