--- a/instadl.html
+++ b/instadl.html
@@ -9,7 +9,7 @@
         gap: 1rem;
         justify-content: center;
         align-items: center;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
       }
       .container {
         display: flex;
@@ -36,6 +36,8 @@
       </span>
     </div>
     <div class="container">
+      <div class="item"></div>
+      <div class="item"></div>
       <div class="item"></div>
       <div class="item"></div>
       <div class="item"></div>
