--- a/instadl.html
+++ b/instadl.html
@@ -13,6 +13,7 @@
       }
       .container {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
       }
       .item {
