--- a/instadl.html
+++ b/instadl.html
@@ -13,12 +13,13 @@
       }
       .container {
         display: flex;
+        gap: 1rem;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
       }
       .item {
-        width: 300px;
-        height: 300px;
+        width: 310px;
+        height: 310px;
         border: 1px solid;
       }
     </style>
