--- a/instadl.html
+++ b/instadl.html
@@ -18,8 +18,8 @@
         justify-content: space-evenly;
       }
       .item {
-        width: 310px;
-        height: 310px;
+        width: 250px;
+        height: 250px;
         border: 1px solid;
       }
     </style>
@@ -43,6 +43,18 @@
       <div class="item"></div>
       <div class="item"></div>
       <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
     </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const inputFolder = document.getElementById("folder");
+
+      });
+    </script>
   </body>
 </html>
