--- a/instadl.html
+++ b/instadl.html
@@ -18,8 +18,8 @@
         justify-content: space-evenly;
       }
       .item {
-        width: 250px;
-        height: 250px;
+        width: 258px;
+        height: 258px;
         border: 1px solid;
       }
     </style>
@@ -30,7 +30,8 @@
         <option value="" disabled selected>--select--</option>
         <option value="random">--random--</option>
       </select>
-      <input type="file" name="folder" id="folder" webkitdirectory />
+      <input type="text" name="dirpath" id="dirpath">
+      <input type="file" name="files" id="files" webkitdirectory />
       <span id="count" style="display: none;">
         <span id="progress" contenteditable=""></span>
         /
