--- a/olympic.html
+++ b/olympic.html
@@ -30,6 +30,7 @@
             apikey,
             "Content-Type": "application/ejson",
             Accept: "application/json",
+            "Access-Control-Allow-Origin": "*",
           },
           body: JSON.stringify({
             dataSource: "scraping",
